# rust-book

./: Cargo.toml  shell.nix  sources.json
src/: christmas.rs  company.rs  fibonacci.rs  grep.rs  guess_the_number.rs  lib.rs  main.rs  number_utils.rs  rectangle.rs  string_utils.rs  temperature.rs
tests/: integration.rs
